style css inline internal external liststyle added

--- a/Kodluyoruz.html
+++ b/Kodluyoruz.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
+	<link rel="stylesheet" href="css/style.css" type="text/css"/>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vahip Simsek - HTML</title>
+	<style>
+		#lighter1 {
+			font-weight: lighter;
+		}
+	</style>
 </head>
 <body>
 	    <h1>Vahip Şimşek - HTML</h1>
@@ -18,23 +24,23 @@
 <ol>
 	<li>Film
 	<ul>
-		<li>Esaretin Bedeli</li>
-		<li>The God Father</li>
-		<li><a href="https://www.imdb.com/title/tt0120689/">Green mile</a></li>
+		<li style="font-weight: lighter;" class="insider">Esaretin Bedeli</li>
+		<li class="lighter insider">The God Father</li>
+		<li class="lighter insider"><a href="https://www.imdb.com/title/tt0120689/">Green mile</a></li>
 	</ul>
 	</li>
 	<li>Dizi
 	<ul>
-		<li>South Park</li>
-		<li>Baki</li>
-		<li><em>The Seven Deathly Sins</em></li>
+		<li  class="lighter">South Park</li>
+		<li  class="lighter">Baki</li>
+		<li  class="lighter"><em>The Seven Deathly Sins</em></li>
 	</ul>
 	</li>
-	<li>Kitap
+	<li id="lighter1">Kitap
 	<ul>
-		<li><a href="https://www.goodreads.com/book/show/25666050-algorithms-to-live-by?from_search=true&amp;from_srp=true&amp;qid=rdN1ioJMDr&amp;rank=1" target="_blank">Algorithms to Live By: The Computer Science of Human Decisions</a></li>
-		<li><a href="https://www.goodreads.com/book/show/2767052-the-hunger-games?from_search=true&amp;from_srp=true&amp;qid=OT9Fl8nVY4&amp;rank=1" target="_blank">The Hunger Games</a></li>
-		<li><a href="https://www.goodreads.com/book/show/13496.A_Game_of_Thrones?from_search=true&amp;from_srp=true&amp;qid=CgLgrSlR7Z&amp;rank=1">A Game of Thrones</a></li>
+		<li  class="lighter insider"><a href="https://www.goodreads.com/book/show/25666050-algorithms-to-live-by?from_search=true&amp;from_srp=true&amp;qid=rdN1ioJMDr&amp;rank=1" target="_blank">Algorithms to Live By: The Computer Science of Human Decisions</a></li>
+		<li  class="lighter insider"><a href="https://www.goodreads.com/book/show/2767052-the-hunger-games?from_search=true&amp;from_srp=true&amp;qid=OT9Fl8nVY4&amp;rank=1" target="_blank">The Hunger Games</a></li>
+		<li  class="lighter insider"><a href="https://www.goodreads.com/book/show/13496.A_Game_of_Thrones?from_search=true&amp;from_srp=true&amp;qid=CgLgrSlR7Z&amp;rank=1">A Game of Thrones</a></li>
 	</ul>
 	</li>
 </ol>
